--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
-* {
-  padding: 0;
+*,
+*::after,
+*::before {
   margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+body {
   box-sizing: border-box;
+  background-color: #2b3e50;
 }
 
 *:focus {
   outline: none;
-}
-
-body {
-  background-color: #2b3e50;
 }
