--- a/src/components/browsemovies/BrowseMoviePage.style.css
+++ b/src/components/browsemovies/BrowseMoviePage.style.css
@@ -1,20 +1,23 @@
 .container-fluid {
-  margin-top: 60px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  padding: 0;
 }
 
 .navbar {
-    box-shadow: none;
-    border: none;
-    font-size: 12px;
+  box-shadow: none;
+  border: none;
+  font-size: 12px;
 }
 
 .navbar-default {
-    background-color: #4e5d6c;
-    border-color: transparent;
+  background-color: #4e5d6c;
+  border-color: transparent;
 }
 
 .navbar {
-    position: relative;
-    min-height: 40px;
-    margin-bottom: 21px;
-    border: 1px solid transparent;
+  position: relative;
+  min-height: 40px;
+  margin-bottom: 21px;
+  border: 1px solid transparent;
+}
