Implemented online movie search functionality

--- a/src/components/sidenav/SideNav.style.css
+++ b/src/components/sidenav/SideNav.style.css
@@ -3,7 +3,7 @@
   font-weight: 400;
   background-color: #4e5d6c;
   position: fixed;
-  width: 300px;
+  width: 23%;
   height: 100%;
   color: #fff;
 }
