--- a/src/components/movieContainer/MovieContainer.style.css
+++ b/src/components/movieContainer/MovieContainer.style.css
@@ -43,11 +43,16 @@ figcaption {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
-  padding-top: 40px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 figcaption span.icon-star {
   color: #6ac045;
+  font-size: 2rem;
   -webkit-transition: all 300ms ease;
   -moz-transition: all 300ms ease;
   transition: all 300ms ease;
